--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-Základné údaje
+Pidgin XEP-0136: Message Archiving plugin
 
+Základné údaje
 Typ práce: 	Bakalárska práca
 Názov témy: 	Plugin pre podporu XEP-0136 do programu Pidgin IM
 Stav prihlásenia: 	schválené
