--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 Pidgin XEP-0136: Message Archiving plugin
 
 Základné údaje
-Typ práce: 	Bakalárska práca
-Názov témy: 	Plugin pre podporu XEP-0136 do programu Pidgin IM
-Fakulta: 	Materiálovotechnologická fakulta so sídlom v Trnave
-Akademický rok: 2010/2011
+Typ práce: 		Bakalárska práca
+Názov témy: 		Plugin pre podporu XEP-0136 do programu Pidgin IM
+Fakulta: 		Materiálovotechnologická fakulta so sídlom v Trnave
+Zodpovedná katedra: 	Ústav aplikovanej informatiky, automatizácie a matematiky (MTF)
+Akademický rok: 	2011/2012
